Normalizing the line breaks in Utility class